# ch10-1553-flightgen

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_SUMMARY.md  README.md  TEST_RESULTS_SUMMARY.md  build_installer.ps1  build_releases.bat  debug_test.json  final_test.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.json  test_1.0s.json  test_30.0s.json  test_5.0s.json  test_60.0s.json  test_converted_output.json  test_final.json  test_final_cleanup.json  test_fixed.json  test_fixed_time.json  test_gps_encoding.py  test_inspect.json  test_inspector_fix.json  test_messages.json  test_multi_output.json  test_nav_output.json  test_output.json  test_portable_output.json  test_pyc10_output.json  test_random_output.json  test_simple.json  timeline_fixed.jsonl
ch10-studio/: CHANGELOG.md  README.md  build-portable.bat  build-portable.ps1  package-lock.json  package.json  tailwind.config.js  tsconfig.json  update-portable.bat  vite.config.ts
ch10gen/: __init__.py  __main__.py  ch10_writer.py  cli.py  config.py  data_generators.py  export.py  flight_profile.py  icd.py  inspector.py  pcap_export.py  random_data.py  report.py  scenario.py  scenario_manager.py  schedule.py  validate.py  wire_reader.py  writer_backend.py
docs/: API.md  ARCHITECTURE.md  BREAKING_CHANGES.md  BUILD.md  CONFIGURATION.md  DEPENDENCIES_AND_TOOLS.md  INDEX.md  MIL-STD-1553 Software-Related Document Links.md  MIL_STD_1553_MESSAGE_STRUCTURE.md  Open-Source Tools for MIL-STD-1553 and IRIG 106 Chapter 10 Data.md  PYCHAPTER10_DOCUMENTATION.md  QUICK_START.md  SCENARIO_DATA_GENERATION.md  (+4 more)
(+166 files in other folders)
